extended lucky number twig template from base twig template

--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -1,3 +1,8 @@
 {# templates/lucky/number.html.twig #}
+{% extends 'base.html.twig' %}
 
-<h1>Your lucky number is {{ number }}</h1>
+{% block title %}Lucky Number{% endblock %}
+
+{% block body %}
+    <h1>Your lucky number is {{ number }}</h1>
+{% endblock %}
